Use `instanceof` pattern matching